// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moveTo renders 0 1`] = `
Array [
  .c0 {
  move-to: 0;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: 0;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: 0;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders function 1`] = `
Array [
  .c0 {
  move-to: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: has;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: has;
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders invalid theme path 1`] = `
Array [
  .c0 {
  move-to: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders negative number 1`] = `
Array [
  .c0 {
  move-to: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  move-to: July;
}

@media screen and (min-width:November) {
  .c0 {
    move-to: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  move-to: July;
}

@media screen and (min-width:November) {
  .c0 {
    move-to: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  move-to: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    move-to: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  move-to: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    move-to: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    move-to: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    move-to: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    move-to: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    move-to: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    move-to: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    move-to: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  move-to: July;
}

@media May {
  .c0 {
    move-to: August;
  }
}

@media April {
  .c0 {
    move-to: September;
  }
}

@media January {
  .c0 {
    move-to: November;
  }
}

@media April {
  .c0 {
    move-to: August;
  }
}

@media June {
  .c0 {
    move-to: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  move-to: July;
}

@media May {
  .c0 {
    move-to: August;
  }
}

@media April {
  .c0 {
    move-to: September;
  }
}

@media January {
  .c0 {
    move-to: November;
  }
}

@media April {
  .c0 {
    move-to: August;
  }
}

@media June {
  .c0 {
    move-to: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  move-to: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    move-to: November;
  }
}

@media April {
  .c0 {
    move-to: January;
  }
}

@media January {
  .c0 {
    move-to: December;
  }
}

@media April {
  .c0 {
    move-to: April;
  }
}

@media June {
  .c0 {
    move-to: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  move-to: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    move-to: November;
  }
}

@media April {
  .c0 {
    move-to: January;
  }
}

@media January {
  .c0 {
    move-to: December;
  }
}

@media April {
  .c0 {
    move-to: April;
  }
}

@media June {
  .c0 {
    move-to: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    move-to: July;
  }
}

@media April {
  .c0 {
    move-to: August;
  }
}

@media January {
  .c0 {
    move-to: September;
  }
}

@media April {
  .c0 {
    move-to: November;
  }
}

@media June {
  .c0 {
    move-to: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    move-to: July;
  }
}

@media April {
  .c0 {
    move-to: August;
  }
}

@media January {
  .c0 {
    move-to: September;
  }
}

@media April {
  .c0 {
    move-to: November;
  }
}

@media June {
  .c0 {
    move-to: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    move-to: January;
  }
}

@media April {
  .c0 {
    move-to: December;
  }
}

@media January {
  .c0 {
    move-to: April;
  }
}

@media April {
  .c0 {
    move-to: May;
  }
}

@media June {
  .c0 {
    move-to: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    move-to: January;
  }
}

@media April {
  .c0 {
    move-to: December;
  }
}

@media January {
  .c0 {
    move-to: April;
  }
}

@media April {
  .c0 {
    move-to: May;
  }
}

@media June {
  .c0 {
    move-to: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders postitive number 1`] = `
Array [
  .c0 {
  move-to: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders string 1`] = `
Array [
  .c0 {
  move-to: July;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: July;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: June;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: June;
}

<div
    className="c0"
  />,
]
`;

exports[`moveTo renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`moveTo renders valid theme path 1`] = `
Array [
  .c0 {
  move-to: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  move-to: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
